# pycord-next

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REWRITE_OVERVIEW.md  mkdocs.yml  netlify.toml  one_shard.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/ISSUE_TEMPLATES/: bug_report.yml  feature_request.yml
changes/: ctx.feature.md  routes.127.feature.md  towncrier.148.feature.md
developer/: index.md
developer/api/: assets.md  events.md  file.md  index.md  mixins.md  models.md
developer/assets/: theme.css
docs/: conf.py  index.rst
docs/api/: core.rst
docs/api/extensions/: gears.rst  pager.rst
docs/extensions/: resourcelinks.py
examples/: application_commands.py  bot.py  cluster.py  pager.py  superspeed_rate_limiting.py
examples-temp/: README.md  one_shard.py  spam_channel_creation.py  spam_messages.py
examples/interactions/commands/: application_commands.py
examples/interactions/components/: button.py  text_input.py
news/: towncrier.148.feature.md
pycord/: __init__.py  __main__.py  _about.py  abc.py  application.py  application_role_connection.py  application_role_connection_metadata.py  arguments.py  asset.py  assets.py  audit_log.py  auto_moderation.py  banner.txt  bot.py  channel.py  channel_typing.py  cli.py  color.py  connection.py  custom_types.py  embed.py  emoji.py  enums.py  errors.py  file.py  flags.py  generators.py  guild.py  guild_scheduled_event.py  guild_template.py  http.py  ibanner.txt  integration.py  interaction.py  interface.py  invite.py  media.py  member.py  message.py  message_iterator.py  (+22 more)
pycord/_cli_extracts/: basic.py
pycord/api/: __init__.py  json_decoder.py  route.py
pycord/api/execution/: __init__.py  executer.py
pycord/api/routers/: __init__.py  application_commands.py  application_role_connection_metadata.py  audit_logs.py  auto_moderation.py  base.py  channels.py  emojis.py  guilds.py  messages.py  scheduled_events.py  user.py
pycord/apps/: __init__.py  gateway.py  rest.py
pycord/commands/: __init__.py  command.py  group.py
pycord/commands/application/: __init__.py  arguments.py  command.py  context.py  errors.py  prelude.py
pycord/community/: __init__.py  extensions.py
pycord/components/: __init__.py  base_component.py  context.py  view.py
pycord/events/: __init__.py  base.py  channels.py  emitter.py  event_manager.py  guilds.py  other.py
pycord/ext/: __init__.py
pycord/ext/gears/: __init__.py  gear.py
pycord/ext/pager/: __init__.py  errors.py  paginator.py
pycord/ext/tasks/: __init__.py
pycord/gateway/: __init__.py  cluster.py  manager.py  notifier.py  passthrough.py  ping.py  shard.py
pycord/internal/: __init__.py  blocks.py  event_manager.py  events.py  gateway.py  http.py  logs.py  reserver.py  shard.py
pycord/internal/gateway/: __init__.py  cluster.py  manager.py  shard.py
pycord/internal/http/: __init__.py  application_commands.py  audit_logs.py  auto_moderation.py  channel.py  emoji.py  guild.py  guild_scheduled_event.py  guild_template.py  invite.py  route.py  stage_instance.py  sticker.py  user.py  voice.py  webhook.py
pycord/native/: __init__.py  gateway.py  opus.py  sock.py
pycord/pages/: errors.py  paginator.py
pycord/panes/: informer.txt
pycord/state/: __init__.py  cache.py  core.py  grouped_store.py  store.py
pycord/traits/: __init__.py
pycord/types/: __init__.py  application.py  application_commands.py  application_role_connection_metadata.py  audit_log.py  auto_moderation.py  channel.py  component.py  embed.py  gateway.py  guild.py  guild_scheduled_event.py  guild_template.py  integration.py  interaction.py  invite.py  media.py  message.py  role.py  snowflake.py  stage_instance.py  user.py  voice_state.py  webhook.py  welcome_screen.py
pycord/ui/: __init__.py  button.py  component.py  house.py  interactive_component.py  select_menu.py  text_input.py
pycord/voice/: __init__.py  gateway.py  opus.py  sock.py
requirements/: _.txt  dev.txt  docs.txt  voice.txt
tests/: __init__.py
