[tool.poetry]
name = "py-cord"
version = "3.0.0"
description = ""
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]
license = "MIT"
packages = [
    { include = "pycord" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {version = "^3.8.1"}
discord-typings = "^0.5.0"
colorlog = "^6.6.0"
uvloop = {version = "^0.16.0", optional = true}
cchardet = {version = "^2.1.7", optional = true}
aiodns = {version = "^3.0.0", optional = true}
Brotli = {version = "^1.0.9", optional = true}
mkdocs = {version = "^1.3.0", optional = true}
mkdocs-material = {version = "^8.3.9", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pyright = "^1.1.257"
types-orjson = "^3.6.2"
flake8 = "^4.0.1"
flake8-functions = "^0.0.7"
flake8-if-statements = "^0.1.0"

[tool.poetry.extras]
speed = [ "uvloop", "cchardet", "aiodns", "Brotli" ]
developer = [ "mkdocs", "mkdocs-material" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = 'black'

[tool.pyright]
strict = true
exclude = [ "**/__pycache__", "**/tests-dev" ]
