[build-system]
requires = [
    "setuptools~=68.1",
    "wheel~=0.41",
    "mypy~=1.5",
    "types-setuptools~=68.1",
    "mypy-extensions~=1.0.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]

[tool.towncrier]
# For finding the __version__
package = "pycord"
package_dir = "pycord"
# For writing into the correct file
filename = "CHANGELOG.md"
start_string = "<!-- tc.s -->\n"
# For finding the news fragments
directory = "changes/"

# For rendering properly for this project
title_format = "## [{version}](https://github.com/pycord/pycord-v3/tree/{version}) ({project_date})"
underlines = ["", "", ""]
template = "templates/towncrier.jinja"

# Grouping of entries, within our changelog
type = [
  { name = "Deprecations and Removals", directory = "removal",  showcontent = true  },
  { name = "Features",                  directory = "feature",  showcontent = true  },
  { name = "Bug Fixes",                 directory = "bug",     showcontent = true  },
  { name = "Documentation",             directory = "doc",      showcontent = true  },
  { name = "Etcetera",                  directory = "etc",      showcontent = false },
  { name = "Trivial Changes",           directory = "trivial",  showcontent = false },
]

[tool.mypy]
strict = true
incremental = true
pretty = true
python_version = 3.11

show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
